[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asg-report"
version = "1.0.0"
description = "AWS Auto Scaling Group and EC2 instance reporting tool for CRDB clusters"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Scott Hamer", email = "scott.hamer@ext.doordash.com"}
]
maintainers = [
    {name = "Scott Hamer", email = "scott.hamer@ext.doordash.com"}
]
keywords = ["aws", "ec2", "autoscaling", "crdb", "infrastructure", "reporting"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.28.0",
]

[project.scripts]
asg-report = "asg_report:main"
